# slow5-pod5-bench

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conditions.md  parse_uuid.cpp  pod5.c  pod5_convert_to_pa.c  pod5_convert_to_pa.cpp  pod5_convert_to_pa_rand.c  pod5_convert_to_pa_rand.cpp  readlist
docs/: android.md  aws.md  conditions.md  exp.md  mac.md  misc.md  res.md
misc/: docker_pod5.sh  docker_pod5_conan.sh  docker_slow5.sh  lizard.sh  tree.sh  (+1 more)
pod5/: CMakeLists.txt  README.md  build.sh  pod5_convert_to_pa.cpp  pod5_convert_to_pa_rand.cpp  random.cpp  readlist  run_rand.sh  run_seq.sh  sequential.cpp
pod5/compat/: .gitignore  example.exp  file.exp  file0.exp  get.sh  pod5_example_0.0.1.cpp  pod5_example_0.0.14.cpp  pod5_example_0.0.41.cpp  pod5_read_0.0.1.cpp  pod5_read_0.0.14.cpp  pod5_read_0.0.41.cpp  pod5_read_0.1.11.cpp  pod5_read_001.cpp  pod5_read_0041.cpp  pod5_read_0111.cpp  run.sh  v0.pod5  v1.pod5  v2.pod5  v3.pod5
pod5/manualbench/basecall/: seq-pod5-dorado-a100.pbs.sh
pod5/manualbench/basecall/old/: seq-pod5-dorado-v100.pbs.sh  seq-pod5-dorado.pbs.sh
pod5/manualbench/datasets/: gadi-seq-hg2_prom_lsk114_5khz_2.pbs.sh  gadi-seq-uhr_prom_rna004.pbs.sh  gadi-seq.pbs.sh
pod5/manualbench/system/: copy-to-scylla.sh  gadi-rand.pbs.sh  gadi-rand.sh  gadi-seq.pbs.sh  gadi.pbs.sh  gtgpu-nfs-rand.sh  gtgpu-nfs-seq.sh  gtgpu-nfs.sh  gtgpu-ssd-rand.sh  gtgpu-ssd-seq.sh  gtgpu-ssd.sh  linux-rand.sh  linux-seq.sh  pawsey-rand.pbs.sh  pawsey-seq.pbs.sh  run-generic.sh  run-rand-android.sh  run-rand-aws-ebs.sh  run-rand-aws-lustre.sh  run-rand-fridge.sh  run-rand-gtgpu-nfs.sh  run-rand-hmnat.sh  run-rand-macmini.sh  run-rand-minifridge.sh  run-rand-scylla.sh  run-seq-android.sh  run-seq-aws-ebs.sh  run-seq-aws-lustre.sh  run-seq-aws-s3.sh  run-seq-fridge.sh  run-seq-gtgpu-nfs.sh  run-seq-hmnat.sh  run-seq-macmini.sh  run-seq-minifridge.sh  run-seq-scylla.sh
pod5/manualbench/system/oldshit/: gtgpu-ssd-seq.sh
pod5/manualbench/threads/: gadi-rand.pbs.sh  gadi-seq.pbs.sh  scylla-rand.pbs.sh  scylla-seq.pbs.sh
pod5/pod5_format/: .gitignore
pod5/test/: readlist
(+133 files in other folders)
